# picoserve

examples/hello_world_embassy/: Cargo.toml  flash.ps1
examples/hello_world_embassy/.cargo/: config.toml
examples/hello_world_embassy/src/: index.html  main.rs
